// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddNotificationButtonClosed Renders 1`] = `
<DragDropContextProvider
  backend={[Function]}
>
  <DragSource(AddNotificationButtonClosed)
    setOpenCategory={[Function]}
  >
    <AddNotificationButtonClosed
      connectDragSource={[Function]}
      isDragging={false}
      setOpenCategory={[Function]}
    >
      <div
        className="notification-button-closed"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="card"
        >
          <div
            className="closed-ML-cat t-vl-gray"
          >
            <div
              className="ml-icon-container"
            >
              <div
                className="icon-notification ml-icon"
                title="Add Notification"
              />
            </div>
          </div>
        </div>
        <div
          className="card alert-closed-ML"
          style={
            Object {
              "display": "none",
            }
          }
        >
          <div
            className="second-level d-flex "
          >
            <div
              className="content-5  my-auto mr-5"
            >
              Add data alert
            </div>
            <div
              className="ml-handle"
            >
              <div
                className="icon-grip"
              />
            </div>
          </div>
        </div>
      </div>
    </AddNotificationButtonClosed>
  </DragSource(AddNotificationButtonClosed)>
</DragDropContextProvider>
`;

exports[`AddNotificationButtonOpen Renders 1`] = `
<DragDropContextProvider
  backend={[Function]}
>
  <DragSource(AddNotificationButtonOpen)>
    <AddNotificationButtonOpen
      connectDragSource={[Function]}
      isDragging={false}
    >
      <div
        className="card"
        onClick={[Function]}
      >
        <div
          className="second-level t-vl-gray d-flex"
        >
          <div
            className="d-flex flex-row align-items-center"
          >
            <div
              className="ml-icon-container"
            >
              <div
                className="icon-notification ml-icon"
              />
            </div>
            <div
              className="content-5 ml-module-name"
            >
              Add data alert
            </div>
          </div>
          <div
            className="ml-handle"
          >
            <div
              className="icon-grip"
            />
          </div>
        </div>
      </div>
    </AddNotificationButtonOpen>
  </DragSource(AddNotificationButtonOpen)>
</DragDropContextProvider>
`;
